--- a/team_list.html
+++ b/team_list.html
@@ -8,23 +8,22 @@
   <style>
     body {
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-      background: #f8fafc; /* Unified background */
-      color: #1e293b;
+      background: #F3F4F6; /* Slate-light for professional feel */
+      color: #1E293B;
       margin: 0;
       min-height: 100vh;
     }
-    /* Header */
     nav {
-      background-color: white;
-      box-shadow: 0 1px 3px rgb(0 0 0 / 0.1);
+      background-color: #FFF;
+      box-shadow: 0 1px 4px rgb(0 0 0 / 0.08);
       position: sticky;
       top: 0;
       z-index: 50;
     }
     .nav-link {
       font-weight: 600;
-      font-size: 0.9rem;
-      color: #475569;
+      font-size: 0.95rem;
+      color: #334155;
       text-decoration: none;
     }
     .nav-link:hover,
@@ -40,26 +39,26 @@
       padding: 0.75rem 1rem;
       font-weight: 600;
       font-size: 1rem;
-      color: #475569;
+      color: #334155;
       text-decoration: none;
-      border-bottom: 1px solid #e2e8f0;
+      border-bottom: 1px solid #E5E7EB;
     }
-    /* Hero header */
     .hero-header {
-      background: linear-gradient(90deg, #e0f2fe, #bae6fd);
-      padding: 2rem 1rem;
+      background: linear-gradient(90deg, #F8FAFC 60%, #F1F5F9 100%);
+      padding: 2rem 1rem 1rem 1rem;
       border-radius: 1rem 1rem 0 0;
       text-align: center;
       margin-bottom: 1.5rem;
-      max-width: 640px;
+      max-width: 630px;
       margin-left: auto;
       margin-right: auto;
+      box-shadow: 0 2px 8px rgb(0 0 0 / 0.06);
     }
     .hero-header h1 {
-      font-size: 2.5rem; /* 40px */
-      font-weight: 900;
-      letter-spacing: 0.05em;
-      color: #0369A1;
+      font-size: 2.25rem;
+      font-weight: 800;
+      letter-spacing: 0.03em;
+      color: #1E293B;
       display: inline-flex;
       align-items: center;
       gap: 0.5rem;
@@ -71,125 +70,94 @@
       overflow-x: auto;
       -webkit-overflow-scrolling: touch;
       white-space: nowrap;
-      margin-bottom: 1rem;
+      margin-bottom: 1.25rem;
       padding-left: 0.25rem;
       padding-right: 0.25rem;
     }
     .tab-button {
       padding: 0.5rem 1.25rem;
-      border-radius: 9999px; /* full pill */
+      border-radius: 9999px;
       font-weight: 600;
-      color: #475569;
+      color: #334155;
       background-color: transparent;
       border: 2px solid transparent;
       cursor: pointer;
-      transition: all 0.25s ease;
-      font-size: 0.9rem;
+      transition: all 0.17s ease;
+      font-size: 0.97rem;
       flex-shrink: 0;
       text-align: center;
       user-select: none;
     }
-    .tab-button:hover:not(.active) {
-      background-color: #bfdbfe; /* light blue */
-      color: #0369A1;
-    }
     .tab-button.active {
-      background-color: #0369A1; /* deep blue */
-      color: white;
-      border-color: #0369A1;
-      box-shadow: 0 4px 8px rgb(3 105 161 / 0.4);
+      background-color: #E2E8F0;
+      color: #1E293B;
+      border-color: #64748B;
+      box-shadow: 0 3px 10px rgba(34, 44, 56, 0.07);
+    }
+    .tab-button:hover:not(.active) {
+      background-color: #F1F5F9;
+      color: #1E293B;
     }
     /* Card container */
     section.bg-white.rounded-2xl.shadow.p-6 {
-      box-shadow: 0 12px 24px rgb(0 0 0 / 0.1);
+      box-shadow: 0 12px 32px rgb(0 0 0 / 0.09);
       border-radius: 1rem;
-      background: white;
-      max-width: 640px;
+      background: #FFF;
+      max-width: 630px;
       margin-left: auto;
       margin-right: auto;
     }
-    /* Table */
     table {
       width: 100%;
       border-collapse: separate;
-      border-spacing: 0 8px;
-      font-size: 0.95rem;
-      min-width: 300px;
+      border-spacing: 0 7px;
+      font-size: 1rem;
     }
     thead th {
-      background-color: #e0f2fe;
+      background-color: #F3F4F6;
       font-weight: 700;
-      color: #0c4a6e;
-      padding: 0.75rem 1rem;
+      color: #334155;
+      padding: 0.7rem 1rem;
       text-align: left;
       border-radius: 0.5rem;
+      font-size: 1.05rem;
       position: sticky;
       top: 0;
       z-index: 10;
+      border-bottom: 1px solid #E5E7EB;
     }
     tbody tr {
-      background-color: white;
-      box-shadow: 0 1px 3px rgb(0 0 0 / 0.06);
-      transition: background-color 0.2s ease;
+      background-color: #FFF;
+      box-shadow: 0 1px 2px rgb(0 0 0 / 0.04);
+      transition: background-color 0.18s;
       border-radius: 0.5rem;
     }
+    tbody tr:nth-child(even) {
+      background-color: #F9FAFB;
+    }
     tbody tr:hover {
-      background-color: #f0f9ff; /* lighter blue */
+      background-color: #F1F5F9;
     }
     tbody td {
-      padding: 0.75rem 1rem;
+      padding: 0.85rem 1rem;
       vertical-align: middle;
       border: none;
-      position: relative;
-    }
-    tbody td.price {
-      text-align: right;
-      font-weight: 700;
-      color: #0369A1;
-      white-space: nowrap;
-      min-width: 95px;
-    }
-    tbody td.position {
-      white-space: nowrap;
+      font-weight: 500;
+      font-size: 1rem;
+      color: #334155;
     }
     tbody td.player {
       display: flex;
       align-items: center;
-      gap: 0.75rem;
-      font-weight: 600;
-      color: #1e293b;
+      gap: 0.9rem;
     }
-    /* Position icons */
+    tbody td.position {
+      white-space: nowrap;
+    }
     .icon {
-      font-size: 1.15rem;
-    }
-    /* Filter box */
-    .filter-box {
-      max-width: 320px;
-      margin-bottom: 1rem;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    input[type="text"] {
-      width: 100%;
-      border: 2px solid #cbd5e1;
-      border-radius: 0.5rem;
-      padding: 0.5rem 1rem;
-      font-size: 1rem;
-      outline-offset: 2px;
-      transition: border-color 0.2s ease;
-    }
-    input[type="text"]:focus {
-      border-color: #0369A1;
-      box-shadow: 0 0 0 3px rgb(3 105 161 / 0.4);
-    }
-    /* Budget summary */
-    .budget-summary {
-      margin-top: 1rem;
-      font-weight: 600;
-      color: #0369A1;
-      text-align: right;
-      user-select: none;
+      font-size:1.1rem;
+      vertical-align: middle;
+      margin-right: 0.25rem;
     }
   </style>
 </head>
@@ -199,7 +167,6 @@
     <nav aria-label="Primary Navigation" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="header-inner flex justify-between items-center h-16">
         <div class="brand font-extrabold text-xl text-gray-900">We Are Eleven</div>
-        <!-- Desktop Nav -->
         <div class="desktop-nav hidden md:flex gap-6">
           <a href="index.html" class="nav-link">Home</a>
           <a href="team_list.html" class="nav-link active" aria-current="page">Teams</a>
@@ -207,7 +174,6 @@
           <a href="admin.html" class="nav-link">Admin</a>
           <a href="about_us.html" class="nav-link">About Us</a>
         </div>
-        <!-- Mobile button -->
         <button id="mobile-menu-button" class="mobile-menu-button md:hidden" aria-label="Toggle menu" aria-expanded="false">
           <svg class="h-6 w-6 text-slate-700" fill="none" stroke="currentColor" stroke-width="2"
             viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
@@ -215,7 +181,6 @@
           </svg>
         </button>
       </div>
-      <!-- Mobile dropdown -->
       <div id="mobile-menu" class="hidden flex-col bg-white shadow-md border-t border-slate-200">
         <a href="index.html" class="mobile-link">Home</a>
         <a href="team_list.html" class="mobile-link active" aria-current="page">Teams</a>
@@ -225,36 +190,18 @@
       </div>
     </nav>
   </header>
-  <!-- Main -->
   <main class="max-w-4xl mx-auto mt-8">
-    <!-- Hero style header -->
     <div class="hero-header">
       <h1>⚽ Independence Cup 2025 - Team List</h1>
     </div>
     <section class="bg-white rounded-2xl shadow p-6">
       <h2 class="text-xl font-semibold mb-4">Team List</h2>
-
-      <!-- Search Filter -->
-      <div class="filter-box">
-        <input
-          type="text"
-          id="searchInput"
-          placeholder="Filter by player name or position…"
-          aria-label="Filter players"
-          autocomplete="off"
-        />
-      </div>
-
-      <!-- Tabs -->
       <div id="tabs" class="tabs" role="tablist" aria-label="Teams"></div>
-      <!-- Team content -->
       <div id="teamContent" tabindex="0" aria-live="polite"></div>
-      <!-- Budget summary -->
-      <div id="budgetSummary" class="budget-summary"></div>
     </section>
   </main>
   <script>
-    // Mobile menu toggle
+    // Mobile menu
     const mobileMenuBtn = document.getElementById("mobile-menu-button");
     const mobileMenu = document.getElementById("mobile-menu");
     mobileMenuBtn.addEventListener("click", () => {
@@ -263,7 +210,7 @@
       mobileMenu.classList.toggle("hidden");
     });
 
-    // Teams and sales data
+    // Teams and players
     const TEAMS = [
       { name: 'Thunderbolt' },
       { name: 'Red Bulls Eleven' },
@@ -272,51 +219,50 @@
       { name: 'Strawhat pirates' },
       { name: 'Amingos FC' },
     ];
-
     const SALES = [
-      { teamIndex: 0, playerName: 'Ayon Roy', position: 'Defence', price: 0 },
-      { teamIndex: 0, playerName: 'Arnab Talukdar', position: 'Goalkeeper', price: 900000 },
-      { teamIndex: 0, playerName: 'Sourav Acharya', position: 'Striker', price: 650000 },
-      { teamIndex: 0, playerName: 'Proloy Malik', position: 'Defence', price: 1000000 },
-      { teamIndex: 0, playerName: 'Siddhant Ameria', position: 'Midfield', price: 550000 },
-      { teamIndex: 0, playerName: 'Kingshuk Banerjee', position: 'Midfield', price: 450000 },
-      { teamIndex: 0, playerName: 'Aritra Adhikari', position: 'Striker', price: 50000 },
-      { teamIndex: 1, playerName: 'Subhojit Dutta', position: 'Midfield', price: 0 },
-      { teamIndex: 1, playerName: 'Soumadeep Dutta', position: 'Goalkeeper', price: 400000 },
-      { teamIndex: 1, playerName: 'Jeffin Mathew', position: 'Midfield', price: 1250000 },
-      { teamIndex: 1, playerName: 'Yash Agarwal', position: 'Defence', price: 450000 },
-      { teamIndex: 1, playerName: 'Shivaditya Gunin', position: 'Striker', price: 600000 },
-      { teamIndex: 1, playerName: 'Arghadeep Das', position: 'Defence', price: 450000 },
-      { teamIndex: 1, playerName: 'Akash Mukherjee', position: 'Midfield', price: 350000 },
-      { teamIndex: 1, playerName: 'Sourav Das', position: 'Midfield', price: 450000 },
-      { teamIndex: 2, playerName: 'Ritam Chowdhury', position: 'Midfield', price: 0 },
-      { teamIndex: 2, playerName: 'Dhruv', position: 'Goalkeeper', price: 400000 },
-      { teamIndex: 2, playerName: 'Risove Show', position: 'Midfield', price: 1750000 },
-      { teamIndex: 2, playerName: 'Biswajit Karmakar', position: 'Midfield', price: 850000 },
-      { teamIndex: 2, playerName: 'Satyaki Sarkar', position: 'Defence', price: 300000 },
-      { teamIndex: 2, playerName: 'Ayan Das', position: 'Defence', price: 300000 },
-      { teamIndex: 2, playerName: 'Dipanjan Mazumder', position: 'Defence', price: 300000 },
-      { teamIndex: 3, playerName: 'Shubhanjan Basu', position: 'Midfield', price: 0 },
-      { teamIndex: 3, playerName: 'Rupayan Chakraborty', position: 'Goalkeeper', price: 700000 },
-      { teamIndex: 3, playerName: 'Soumik Mukherjee', position: 'Defence', price: 1300000 },
-      { teamIndex: 3, playerName: 'Shardendu Lahiri', position: 'Midfield', price: 400000 },
-      { teamIndex: 3, playerName: 'Subhayan Banerjee', position: 'Defence', price: 300000 },
-      { teamIndex: 3, playerName: 'Pulak Dowari', position: 'Defence', price: 1100000 },
-      { teamIndex: 3, playerName: 'Sagnik Chakraborty', position: 'Midfield', price: 150000 },
-      { teamIndex: 4, playerName: 'Srinjoy Kundu', position: 'Midfield', price: 0 },
-      { teamIndex: 4, playerName: 'Arko Dutta', position: 'Goalkeeper', price: 500000 },
-      { teamIndex: 4, playerName: 'Suvam Chakraborty', position: 'Defence', price: 800000 },
-      { teamIndex: 4, playerName: 'Dibwayan Trivedi', position: 'Defence', price: 450000 },
-      { teamIndex: 4, playerName: 'Supratim Sengupta', position: 'Striker', price: 1000000 },
-      { teamIndex: 4, playerName: 'Aman Pandey', position: 'Defence', price: 500000 },
-      { teamIndex: 4, playerName: 'Ankit Aich', position: 'Defence', price: 450000 },
-      { teamIndex: 5, playerName: 'Subhamoy Das', position: 'Midfield', price: 0 },
-      { teamIndex: 5, playerName: 'Aditya Chakraborty', position: 'Goalkeeper', price: 400000 },
-      { teamIndex: 5, playerName: 'Vasu Gupta', position: 'Striker', price: 1100000 },
-      { teamIndex: 5, playerName: 'Krishnendu Mondal', position: 'Midfield', price: 550000 },
-      { teamIndex: 5, playerName: 'Sanchay Bose', position: 'Defence', price: 750000 },
-      { teamIndex: 5, playerName: 'Rahul Sarkar', position: 'Defence', price: 600000 },
-      { teamIndex: 5, playerName: 'Kaustav Guha Mazumdar', position: 'Striker', price: 500000 }
+      { teamIndex: 0, playerName: 'Ayon Roy', position: 'Defence' },
+      { teamIndex: 0, playerName: 'Arnab Talukdar', position: 'Goalkeeper' },
+      { teamIndex: 0, playerName: 'Sourav Acharya', position: 'Striker' },
+      { teamIndex: 0, playerName: 'Proloy Malik', position: 'Defence' },
+      { teamIndex: 0, playerName: 'Siddhant Ameria', position: 'Midfield' },
+      { teamIndex: 0, playerName: 'Kingshuk Banerjee', position: 'Midfield' },
+      { teamIndex: 0, playerName: 'Aritra Adhikari', position: 'Striker' },
+      { teamIndex: 1, playerName: 'Subhojit Dutta', position: 'Midfield' },
+      { teamIndex: 1, playerName: 'Soumadeep Dutta', position: 'Goalkeeper' },
+      { teamIndex: 1, playerName: 'Jeffin Mathew', position: 'Midfield' },
+      { teamIndex: 1, playerName: 'Yash Agarwal', position: 'Defence' },
+      { teamIndex: 1, playerName: 'Shivaditya Gunin', position: 'Striker' },
+      { teamIndex: 1, playerName: 'Arghadeep Das', position: 'Defence' },
+      { teamIndex: 1, playerName: 'Akash Mukherjee', position: 'Midfield' },
+      { teamIndex: 1, playerName: 'Sourav Das', position: 'Midfield' },
+      { teamIndex: 2, playerName: 'Ritam Chowdhury', position: 'Midfield' },
+      { teamIndex: 2, playerName: 'Dhruv', position: 'Goalkeeper' },
+      { teamIndex: 2, playerName: 'Risove Show', position: 'Midfield' },
+      { teamIndex: 2, playerName: 'Biswajit Karmakar', position: 'Midfield' },
+      { teamIndex: 2, playerName: 'Satyaki Sarkar', position: 'Defence' },
+      { teamIndex: 2, playerName: 'Ayan Das', position: 'Defence' },
+      { teamIndex: 2, playerName: 'Dipanjan Mazumder', position: 'Defence' },
+      { teamIndex: 3, playerName: 'Shubhanjan Basu', position: 'Midfield' },
+      { teamIndex: 3, playerName: 'Rupayan Chakraborty', position: 'Goalkeeper' },
+      { teamIndex: 3, playerName: 'Soumik Mukherjee', position: 'Defence' },
+      { teamIndex: 3, playerName: 'Shardendu Lahiri', position: 'Midfield' },
+      { teamIndex: 3, playerName: 'Subhayan Banerjee', position: 'Defence' },
+      { teamIndex: 3, playerName: 'Pulak Dowari', position: 'Defence' },
+      { teamIndex: 3, playerName: 'Sagnik Chakraborty', position: 'Midfield' },
+      { teamIndex: 4, playerName: 'Srinjoy Kundu', position: 'Midfield' },
+      { teamIndex: 4, playerName: 'Arko Dutta', position: 'Goalkeeper' },
+      { teamIndex: 4, playerName: 'Suvam Chakraborty', position: 'Defence' },
+      { teamIndex: 4, playerName: 'Dibwayan Trivedi', position: 'Defence' },
+      { teamIndex: 4, playerName: 'Supratim Sengupta', position: 'Striker' },
+      { teamIndex: 4, playerName: 'Aman Pandey', position: 'Defence' },
+      { teamIndex: 4, playerName: 'Ankit Aich', position: 'Defence' },
+      { teamIndex: 5, playerName: 'Subhamoy Das', position: 'Midfield' },
+      { teamIndex: 5, playerName: 'Aditya Chakraborty', position: 'Goalkeeper' },
+      { teamIndex: 5, playerName: 'Vasu Gupta', position: 'Striker' },
+      { teamIndex: 5, playerName: 'Krishnendu Mondal', position: 'Midfield' },
+      { teamIndex: 5, playerName: 'Sanchay Bose', position: 'Defence' },
+      { teamIndex: 5, playerName: 'Rahul Sarkar', position: 'Defence' },
+      { teamIndex: 5, playerName: 'Kaustav Guha Mazumdar', position: 'Striker' }
     ];
 
     const positionIcons = {
@@ -328,11 +274,7 @@
 
     const tabsContainer = document.getElementById("tabs");
     const teamContent = document.getElementById("teamContent");
-    const budgetSummary = document.getElementById("budgetSummary");
-    const searchInput = document.getElementById("searchInput");
-
     let activeTeamIndex = 0;
-    let filteredPlayers = [];
 
     function renderTabs() {
       tabsContainer.innerHTML = "";
@@ -350,69 +292,36 @@
           btn.classList.add("active");
           btn.setAttribute("aria-selected", "true");
           activeTeamIndex = index;
-          searchInput.value = ""; // reset filter on tab change
-          filteredPlayers = SALES.filter(p => p.teamIndex === activeTeamIndex);
-          renderTeamTable(filteredPlayers);
-          renderBudgetSummary(filteredPlayers);
+          renderTeamTable();
         });
         tabsContainer.appendChild(btn);
-        if (index === 0) {
-          btn.classList.add("active");
-        }
+        if (index === 0) btn.classList.add("active");
       });
-      // Initially set filteredPlayers and render first team
-      filteredPlayers = SALES.filter(p => p.teamIndex === 0);
-      renderTeamTable(filteredPlayers);
-      renderBudgetSummary(filteredPlayers);
+      renderTeamTable();
     }
 
-    // Render team table rows with filtering
-    function renderTeamTable(players) {
+    function renderTeamTable() {
+      const players = SALES.filter(p => p.teamIndex === activeTeamIndex);
       teamContent.innerHTML = `
         <table>
           <thead>
             <tr>
-              <th scope="col">Player</th>
-              <th scope="col">Position</th>
-              <th scope="col" style="text-align:right;">Price (₹)</th>
+              <th>Player</th>
+              <th>Position</th>
             </tr>
           </thead>
           <tbody>
-            ${players.length === 0 ? `<tr><td colspan="3" style="text-align:center; padding:1rem; color:#64748b;">No players found.</td></tr>` : players.map(p => `
+            ${players.map(p => `
               <tr>
                 <td class="player"><span class="icon" aria-hidden="true">${positionIcons[p.position] || ''}</span>${p.playerName}</td>
                 <td class="position">${p.position}</td>
-                <td class="price">${p.price.toLocaleString()}</td>
               </tr>
             `).join("")}
           </tbody>
         </table>
       `;
     }
-
-    // Calculate and render total budget spent by the team
-    function renderBudgetSummary(players) {
-      const total = players.reduce((sum, p) => sum + p.price, 0);
-      budgetSummary.textContent = `💰 Total Spend: ₹${total.toLocaleString()}`;
-    }
-
-    // Filter players on search input (by player name or position)
-    searchInput.addEventListener("input", (e) => {
-      const term = e.target.value.trim().toLowerCase();
-      if (term === "") {
-        filteredPlayers = SALES.filter(p => p.teamIndex === activeTeamIndex);
-      } else {
-        filteredPlayers = SALES.filter(p =>
-          p.teamIndex === activeTeamIndex &&
-          (p.playerName.toLowerCase().includes(term) || p.position.toLowerCase().includes(term))
-        );
-      }
-      renderTeamTable(filteredPlayers);
-      renderBudgetSummary(filteredPlayers);
-    });
-
     renderTabs();
-
   </script>
 </body>
 </html>
