--- a/team_list.html
+++ b/team_list.html
@@ -181,7 +181,7 @@
           </svg>
         </button>
       </div>
-      <div id="mobile-menu" class="hidden flex-col bg-white shadow-md border-t border-slate-200">
+      <div id="mobile-menu" class="hidden flex flex-col bg-white shadow-md border-t border-slate-200">
         <a href="index.html" class="mobile-link">Home</a>
         <a href="team_list.html" class="mobile-link active" aria-current="page">Teams</a>
         <a href="team_fixtures.html" class="mobile-link">Fixtures</a>
