--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -88,7 +88,7 @@
         </button>
       </div>
       <!-- Mobile dropdown -->
-      <div id="mobile-menu" class="hidden flex-col bg-white shadow-md border-t border-slate-200">
+      <div id="mobile-menu" class="hidden flex flex-col bg-white shadow-md border-t border-slate-200">
         <a href="index.html" class="mobile-link">Home</a>
         <a href="team_list.html" class="mobile-link">Teams</a>
         <a href="team_fixtures.html" class="mobile-link active" aria-current="page">Fixtures</a>
@@ -123,3 +123,4 @@
   </script>
 </body>
 </html>
+
