--- a/admin.html
+++ b/admin.html
@@ -123,7 +123,7 @@
         </button>
       </div>
       <!-- Mobile dropdown -->
-      <div id="mobile-menu" class="hidden flex-col bg-white shadow-md border-t border-slate-200">
+      <div id="mobile-menu" class="hidden flex flex-col bg-white shadow-md border-t border-slate-200">
         <a href="index.html" class="mobile-link">Home</a>
         <a href="team_list.html" class="mobile-link">Teams</a>
         <a href="team_fixtures.html" class="mobile-link">Fixtures</a>
