--- a/team_list.html
+++ b/team_list.html
@@ -216,7 +216,7 @@
       { name: 'Red Bulls Eleven' },
       { name: 'Messiah FC' },
       { name: 'White Panthers' },
-      { name: 'Strawhat pirates' },
+      { name: 'Strawhat Pirates' },
       { name: 'Amingos FC' },
     ];
     const SALES = [
