--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -106,7 +106,7 @@
       <p class="mb-6">Fixtures will be released soon and updates will be informed on the Notice Board.</p>
       <section class="bg-blue-50 border border-blue-300 rounded-lg p-4">
         <h2 class="text-xl font-semibold mb-2">📢 Notice Board</h2>
-        <p class="text-sm text-blue-700">No notices published yet. Stay tuned here for updates.</p>
+        <p class="text-sm text-blue-700">The team fixtures will be released soon. All players and teams are requested to keep an eye on the notice board for updates.</p>
       </section>
     </div>
   </main>
@@ -123,4 +123,5 @@
   </script>
 </body>
 </html>
+
 
