--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 <!-- Sidebar -->
 <section class="bg-blue-50 border border-blue-300 rounded-lg p-4">
   <h2 class="text-xl font-semibold mb-2">📢 Notice Board</h2>
-  <p class="text-sm text-blue-700">No notices published yet. Stay tuned here for updates.</p>
+  <p class="text-sm text-blue-700">The team fixtures will be released soon. All players and teams are requested to keep an eye on the notice board for updates.</p>
 </section>
 
   </div>
@@ -177,6 +177,7 @@
   </script>
 </body>
 </html>
+
 
 
 
