--- a/about_us.html
+++ b/about_us.html
@@ -130,10 +130,10 @@
     <!-- New About Us section -->
     <section class="bg-white rounded-2xl shadow p-6 mt-12 text-slate-700 leading-relaxed text-justify">
       <p>
-        Welcome to&nbsp;<strong>We Are Eleven</strong>, a passionate football group that embodies the spirit of unity, teamwork, and excellence on and off the pitch.
+        Welcome to&nbsp;<strong>We Are Eleven</strong>, a passionate football community that embodies the spirit of unity, teamwork, and excellence on and off the pitch.
       </p>
       <p class="mt-4">
-        Founded on the belief that football is more than just a game, our group brings together a diverse team of players, organizers, and supporters who share one mission: to celebrate the beautiful game through competitive spirit, camaraderie, and unwavering dedication.
+        Founded on the belief that football is more than just a game, our community brings together a diverse team of players, organizers, and supporters who share one mission: to celebrate the beautiful game through competitive spirit, camaraderie, and unwavering dedication.
       </p>
       <p class="mt-4">
         We are more than just eleven players; we are a family united by our love for football, striving to uplift and inspire each other with every kick. Whether it's intense tournaments, friendly matches, or community events, We Are Eleven stands as a symbol of passion, resilience, and sportsmanship.
