--- a/index.html
+++ b/index.html
@@ -94,8 +94,15 @@
   <!-- Header -->
   <header>
     <nav aria-label="Primary Navigation" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      
       <div class="header-inner flex justify-between items-center h-16">
-        <div class="brand font-extrabold text-xl text-gray-900">We Are Eleven</div>
+        <div class="brand flex items-center font-extrabold text-xl text-gray-900">
+          <img src="A_logo_for_a_soccer_community_named_We_Are_Eleven.png" 
+               alt="We Are Eleven Logo" 
+               class="h-10 w-10 mr-2 rounded-full" />
+          We Are Eleven
+        </div>
+
         <!-- Desktop Nav -->
         <div class="desktop-nav hidden md:flex gap-6">
           <a href="index.html" class="nav-link active" aria-current="page">Home</a>
@@ -177,6 +184,7 @@
   </script>
 </body>
 </html>
+
 
 
 
