--- a/team_list.html
+++ b/team_list.html
@@ -166,7 +166,12 @@
   <header>
     <nav aria-label="Primary Navigation" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="header-inner flex justify-between items-center h-16">
-        <div class="brand font-extrabold text-xl text-gray-900">We Are Eleven</div>
+        <div class="brand flex items-center font-extrabold text-xl text-gray-900">
+          <img src="Logo.png"  
+               alt="We Are Eleven Logo" 
+               class="h-10 w-10 mr-2 rounded-full" />
+          We Are Eleven
+        </div>
         <div class="desktop-nav hidden md:flex gap-6">
           <a href="index.html" class="nav-link">Home</a>
           <a href="team_list.html" class="nav-link active" aria-current="page">Teams</a>
