--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@
     <nav aria-label="Primary Navigation" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       
       <div class="header-inner flex justify-between items-center h-16">
-        <div class="brand flex items-center font-extrabold text-xl text-gray-900">
+        <a href="index.html" class="brand flex items-center font-extrabold text-xl text-gray-900">
           <img src="Logo.png" 
                alt="We Are Eleven Logo" 
-               class="h-10 w-10 mr-2 rounded-full" />
+               class="h-8 w-8 sm:h-10 sm:w-10 md:h-12 md:w-12 mr-2 rounded-full object-contain" />
           We Are Eleven
-        </div>
+        </a>
+
 
         <!-- Desktop Nav -->
         <div class="desktop-nav hidden md:flex gap-6">
@@ -184,6 +185,7 @@
   </script>
 </body>
 </html>
+
 
 
 
