--- a/team_list.html
+++ b/team_list.html
@@ -217,12 +217,12 @@
 
     // Teams and players
     const TEAMS = [
-      { name: 'Thunderbolt', image: 'images/thunderbolt.png' },
-      { name: 'Red Bulls Eleven', image: 'images/redbulls.png' },
-      { name: 'Messiah FC', image: 'images/messiah.png' },
-      { name: 'White Panthers', image: 'images/whitepanthers.png' },
-      { name: 'Strawhat Pirates', image: 'images/strawhat.png' },
-      { name: 'Amingos FC', image: 'images/amingos.png' },
+      { name: 'Thunderbolt', image: 'Thunderbolt.png' },
+      { name: 'Red Bulls Eleven', image: 'Red Bulls Eleven.png' },
+      { name: 'Messiah FC', image: 'Messiah FC.png' },
+      { name: 'White Panthers', image: 'images/White Panthers.png' },
+      { name: 'Strawhat Pirates', image: 'Strawhat Pirates.png' },
+      { name: 'Amingos FC', image: 'images/Amingos FC.png' },
     ];
     const SALES = [
       { teamIndex: 0, playerName: 'Ayon Roy', position: 'Defence' },
