--- a/team_list.html
+++ b/team_list.html
@@ -220,9 +220,9 @@
       { name: 'Thunderbolt', image: 'Thunderbolt.jpg' },
       { name: 'Red Bulls Eleven', image: 'Red Bulls Eleven.jpg' },
       { name: 'Messiah FC', image: 'Messiah FC.jpg' },
-      { name: 'White Panthers', image: 'images/White Panthers.jpg' },
+      { name: 'White Panthers', image: 'White Panthers.jpg' },
       { name: 'Strawhat Pirates', image: 'Strawhat Pirates.jpg' },
-      { name: 'Amingos FC', image: 'images/Amingos FC.jpg' },
+      { name: 'Amingos FC', image: 'Amingos FC.jpg' },
     ];
     const SALES = [
       { teamIndex: 0, playerName: 'Ayon Roy', position: 'Defence' },
