--- a/team_list.html
+++ b/team_list.html
@@ -225,14 +225,14 @@
       { name: 'Amingos FC', image: 'Amingos FC.jpg' },
     ];
     const SALES = [
-      { teamIndex: 0, playerName: 'Ayon Roy', position: 'Defence' },
+      { teamIndex: 0, playerName: 'Ayon Roy', position: 'Defence', captain: true },
       { teamIndex: 0, playerName: 'Arnab Talukdar', position: 'Goalkeeper' },
       { teamIndex: 0, playerName: 'Sourav Acharya', position: 'Striker' },
       { teamIndex: 0, playerName: 'Proloy Malik', position: 'Defence' },
       { teamIndex: 0, playerName: 'Siddhant Ameria', position: 'Midfield' },
       { teamIndex: 0, playerName: 'Kingshuk Banerjee', position: 'Midfield' },
       { teamIndex: 0, playerName: 'Aritra Adhikari', position: 'Striker' },
-      { teamIndex: 1, playerName: 'Subhojit Dutta', position: 'Midfield' },
+      { teamIndex: 1, playerName: 'Subhojit Dutta', position: 'Midfield', captain: true },
       { teamIndex: 1, playerName: 'Soumadeep Dutta', position: 'Goalkeeper' },
       { teamIndex: 1, playerName: 'Jeffin Mathew', position: 'Midfield' },
       { teamIndex: 1, playerName: 'Yash Agarwal', position: 'Defence' },
@@ -240,28 +240,28 @@
       { teamIndex: 1, playerName: 'Arghadeep Das', position: 'Defence' },
       { teamIndex: 1, playerName: 'Akash Mukherjee', position: 'Midfield' },
       { teamIndex: 1, playerName: 'Sourav Das', position: 'Midfield' },
-      { teamIndex: 2, playerName: 'Ritam Chowdhury', position: 'Midfield' },
+      { teamIndex: 2, playerName: 'Ritam Chowdhury', position: 'Midfield', captain: true },
       { teamIndex: 2, playerName: 'Dhruv', position: 'Goalkeeper' },
       { teamIndex: 2, playerName: 'Risove Show', position: 'Midfield' },
       { teamIndex: 2, playerName: 'Biswajit Karmakar', position: 'Midfield' },
       { teamIndex: 2, playerName: 'Satyaki Sarkar', position: 'Defence' },
       { teamIndex: 2, playerName: 'Ayan Das', position: 'Defence' },
       { teamIndex: 2, playerName: 'Dipanjan Mazumder', position: 'Defence' },
-      { teamIndex: 3, playerName: 'Shubhanjan Basu', position: 'Midfield' },
+      { teamIndex: 3, playerName: 'Shubhanjan Basu', position: 'Midfield', captain: true },
       { teamIndex: 3, playerName: 'Rupayan Chakraborty', position: 'Goalkeeper' },
       { teamIndex: 3, playerName: 'Soumik Mukherjee', position: 'Defence' },
       { teamIndex: 3, playerName: 'Shardendu Lahiri', position: 'Midfield' },
       { teamIndex: 3, playerName: 'Subhayan Banerjee', position: 'Defence' },
       { teamIndex: 3, playerName: 'Pulak Dowari', position: 'Defence' },
       { teamIndex: 3, playerName: 'Sagnik Chakraborty', position: 'Midfield' },
-      { teamIndex: 4, playerName: 'Srinjoy Kundu', position: 'Midfield' },
+      { teamIndex: 4, playerName: 'Srinjoy Kundu', position: 'Midfield', captain: true },
       { teamIndex: 4, playerName: 'Arko Dutta', position: 'Goalkeeper' },
       { teamIndex: 4, playerName: 'Suvam Chakraborty', position: 'Defence' },
       { teamIndex: 4, playerName: 'Dibwayan Trivedi', position: 'Defence' },
       { teamIndex: 4, playerName: 'Supratim Sengupta', position: 'Striker' },
       { teamIndex: 4, playerName: 'Aman Pandey', position: 'Defence' },
       { teamIndex: 4, playerName: 'Ankit Aich', position: 'Defence' },
-      { teamIndex: 5, playerName: 'Subhamoy Das', position: 'Midfield' },
+      { teamIndex: 5, playerName: 'Subhamoy Das', position: 'Midfield', captain: true },
       { teamIndex: 5, playerName: 'Aditya Chakraborty', position: 'Goalkeeper' },
       { teamIndex: 5, playerName: 'Vasu Gupta', position: 'Striker' },
       { teamIndex: 5, playerName: 'Krishnendu Mondal', position: 'Midfield' },
@@ -309,20 +309,30 @@
     }
 
     function renderTeamTable() {
+      const team = TEAMS[activeTeamIndex];
       const players = SALES.filter(p => p.teamIndex === activeTeamIndex);
+    
       teamContent.innerHTML = `
-        <table>
-          <thead>
+        <div class="flex items-center gap-3 mb-4">
+          <img src="${team.image}" alt="${team.name} Logo" class="h-10 w-10 rounded-full object-cover" />
+          <h3 class="text-lg font-bold">${team.name}</h3>
+        </div>
+        <table class="w-full border border-gray-200 rounded-lg overflow-hidden">
+          <thead class="bg-gray-100">
             <tr>
-              <th>Player</th>
-              <th>Position</th>
+              <th class="px-4 py-2 text-left">Player</th>
+              <th class="px-4 py-2 text-left">Position</th>
             </tr>
           </thead>
           <tbody>
             ${players.map(p => `
-              <tr>
-                <td class="player"><span class="icon" aria-hidden="true">${positionIcons[p.position] || ''}</span>${p.playerName}</td>
-                <td class="position">${p.position}</td>
+              <tr class="border-t">
+                <td class="px-4 py-2 flex items-center gap-2">
+                  <span class="icon" aria-hidden="true">${positionIcons[p.position] || ''}</span>
+                  ${p.playerName}
+                  ${p.captain ? '<span class="ml-2 text-xs font-bold text-blue-600 bg-blue-100 px-2 py-0.5 rounded-full">C</span>' : ''}
+                </td>
+                <td class="px-4 py-2">${p.position}</td>
               </tr>
             `).join("")}
           </tbody>
