--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -22,8 +22,8 @@
       <div class="space-y-4">
         <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
           <div class="flex items-center gap-2">
-            <img src="Thunderbolts.jpg" alt="Thunderbolts" class="h-8 w-8 object-contain">
-            <span class="font-semibold">Thunderbolts</span>
+            <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain">
+            <span class="font-semibold">Thunderbolt</span>
           </div>
           <span class="text-slate-500 font-medium">vs</span>
           <div class="flex items-center gap-2">
@@ -34,13 +34,13 @@
 
         <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
           <div class="flex items-center gap-2">
-            <img src="White Panther.jpg" alt="White Panther" class="h-8 w-8 object-contain">
-            <span class="font-semibold">White Panther</span>
+            <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain">
+            <span class="font-semibold">White Panthers</span>
           </div>
           <span class="text-slate-500 font-medium">vs</span>
           <div class="flex items-center gap-2">
-            <img src="Thunderbolts.jpg" alt="Thunderbolts" class="h-8 w-8 object-contain">
-            <span class="font-semibold">Thunderbolts</span>
+            <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain">
+            <span class="font-semibold">Thunderbolt</span>
           </div>
         </div>
 
@@ -51,8 +51,8 @@
           </div>
           <span class="text-slate-500 font-medium">vs</span>
           <div class="flex items-center gap-2">
-            <img src="White Panther.jpg" alt="White Panther" class="h-8 w-8 object-contain">
-            <span class="font-semibold">White Panther</span>
+            <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain">
+            <span class="font-semibold">White Panthers</span>
           </div>
         </div>
 
@@ -64,27 +64,27 @@
           </div>
           <span class="text-slate-500 font-medium">vs</span>
           <div class="flex items-center gap-2">
-            <img src="Thunderbolts.jpg" alt="Thunderbolts" class="h-8 w-8 object-contain">
-            <span class="font-semibold">Thunderbolts</span>
+            <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain">
+            <span class="font-semibold">Thunderbolt</span>
           </div>
         </div>
 
         <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
           <div class="flex items-center gap-2">
-            <img src="Thunderbolts.jpg" alt="Thunderbolts" class="h-8 w-8 object-contain">
-            <span class="font-semibold">Thunderbolts</span>
+            <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain">
+            <span class="font-semibold">Thunderbolt</span>
           </div>
           <span class="text-slate-500 font-medium">vs</span>
           <div class="flex items-center gap-2">
-            <img src="White Panther.jpg" alt="White Panther" class="h-8 w-8 object-contain">
-            <span class="font-semibold">White Panther</span>
+            <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain">
+            <span class="font-semibold">White Panthers</span>
           </div>
         </div>
 
         <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
           <div class="flex items-center gap-2">
-            <img src="White Panther.jpg" alt="White Panther" class="h-8 w-8 object-contain">
-            <span class="font-semibold">White Panther</span>
+            <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain">
+            <span class="font-semibold">White Panthers</span>
           </div>
           <span class="text-slate-500 font-medium">vs</span>
           <div class="flex items-center gap-2">
@@ -187,3 +187,4 @@
   </section>
 </body>
 </html>
+
