--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -13,163 +13,199 @@
   </style>
 </head>
 <body class="p-6">
+  <section class="groups bg-white rounded-lg p-6 shadow mb-10">
+    <h2 class="text-3xl font-extrabold mb-6 text-center text-blue-800">🗂️ Group Teams</h2>
+    <div class="flex justify-around flex-wrap gap-10 text-slate-800">
+      <!-- Group A Teams -->
+      <div>
+        <h3 class="text-2xl font-semibold mb-3 border-b pb-2">Group A</h3>
+        <ul class="list-disc list-inside space-y-1">
+          <li>Thunderbolt</li>
+          <li>Messiah FC</li>
+          <li>White Panthers</li>
+        </ul>
+      </div>
+      <!-- Group B Teams -->
+      <div>
+        <h3 class="text-2xl font-semibold mb-3 border-b pb-2">Group B</h3>
+        <ul class="list-disc list-inside space-y-1">
+          <li>Amingos FC</li>
+          <li>Strawhat Pirates</li>
+          <li>Red Bulls Eleven</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
   <section class="fixtures bg-white rounded-lg p-6 shadow">
     <h2 class="text-3xl font-extrabold mb-6 text-center text-blue-800">📅 Tournament Fixtures</h2>
 
-    <!-- Group A -->
+    <!-- Group A Fixtures with Match Numbers -->
     <div class="mb-10">
-      <h3 class="text-2xl font-semibold text-slate-800 mb-4 border-b pb-2">Group A</h3>
+      <h3 class="text-2xl font-semibold text-slate-800 mb-4 border-b pb-2">Group A Matches</h3>
       <div class="space-y-4">
         <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
           <div class="flex items-center gap-2">
-            <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain">
+            <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Thunderbolt</span>
           </div>
           <span class="text-slate-500 font-medium">vs</span>
           <div class="flex items-center gap-2">
-            <img src="Messiah FC.jpg" alt="Messiah FC" class="h-8 w-8 object-contain">
+            <img src="Messiah FC.jpg" alt="Messiah FC" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Messiah FC</span>
           </div>
+          <span class="font-semibold text-slate-700">Match 1</span>
         </div>
 
         <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
           <div class="flex items-center gap-2">
-            <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain">
+            <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain" />
             <span class="font-semibold">White Panthers</span>
           </div>
           <span class="text-slate-500 font-medium">vs</span>
           <div class="flex items-center gap-2">
-            <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain">
+            <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Thunderbolt</span>
           </div>
+          <span class="font-semibold text-slate-700">Match 2</span>
         </div>
 
         <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
           <div class="flex items-center gap-2">
-            <img src="Messiah FC.jpg" alt="Messiah FC" class="h-8 w-8 object-contain">
+            <img src="Messiah FC.jpg" alt="Messiah FC" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Messiah FC</span>
           </div>
           <span class="text-slate-500 font-medium">vs</span>
           <div class="flex items-center gap-2">
-            <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain">
+            <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain" />
             <span class="font-semibold">White Panthers</span>
           </div>
+          <span class="font-semibold text-slate-700">Match 3</span>
         </div>
 
         <!-- Reverse fixtures -->
         <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
           <div class="flex items-center gap-2">
-            <img src="Messiah FC.jpg" alt="Messiah FC" class="h-8 w-8 object-contain">
+            <img src="Messiah FC.jpg" alt="Messiah FC" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Messiah FC</span>
           </div>
           <span class="text-slate-500 font-medium">vs</span>
           <div class="flex items-center gap-2">
-            <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain">
+            <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Thunderbolt</span>
           </div>
+          <span class="font-semibold text-slate-700">Match 4</span>
         </div>
 
         <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
           <div class="flex items-center gap-2">
-            <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain">
+            <img src="Thunderbolt.jpg" alt="Thunderbolt" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Thunderbolt</span>
           </div>
           <span class="text-slate-500 font-medium">vs</span>
           <div class="flex items-center gap-2">
-            <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain">
+            <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain" />
             <span class="font-semibold">White Panthers</span>
           </div>
+          <span class="font-semibold text-slate-700">Match 5</span>
         </div>
 
         <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
           <div class="flex items-center gap-2">
-            <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain">
+            <img src="White Panthers.jpg" alt="White Panthers" class="h-8 w-8 object-contain" />
             <span class="font-semibold">White Panthers</span>
           </div>
           <span class="text-slate-500 font-medium">vs</span>
           <div class="flex items-center gap-2">
-            <img src="Messiah FC.jpg" alt="Messiah FC" class="h-8 w-8 object-contain">
+            <img src="Messiah FC.jpg" alt="Messiah FC" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Messiah FC</span>
           </div>
+          <span class="font-semibold text-slate-700">Match 6</span>
         </div>
       </div>
     </div>
 
-    <!-- Group B -->
+    <!-- Group B Fixtures with Match Numbers -->
     <div class="mb-10">
-      <h3 class="text-2xl font-semibold text-slate-800 mb-4 border-b pb-2">Group B</h3>
+      <h3 class="text-2xl font-semibold text-slate-800 mb-4 border-b pb-2">Group B Matches</h3>
       <div class="space-y-4">
         <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
           <div class="flex items-center gap-2">
-            <img src="Amingos FC.jpg" alt="Amingos FC" class="h-8 w-8 object-contain">
+            <img src="Amingos FC.jpg" alt="Amingos FC" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Amingos FC</span>
           </div>
           <span class="text-slate-500 font-medium">vs</span>
           <div class="flex items-center gap-2">
-            <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="h-8 w-8 object-contain">
+            <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Strawhat Pirates</span>
           </div>
+          <span class="font-semibold text-slate-700">Match 7</span>
         </div>
 
         <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
           <div class="flex items-center gap-2">
-            <img src="Red Bulls Eleven.jpg" alt="Red Bulls Eleven" class="h-8 w-8 object-contain">
+            <img src="Red Bulls Eleven.jpg" alt="Red Bulls Eleven" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Red Bulls Eleven</span>
           </div>
           <span class="text-slate-500 font-medium">vs</span>
           <div class="flex items-center gap-2">
-            <img src="Amingos FC.jpg" alt="Amingos FC" class="h-8 w-8 object-contain">
+            <img src="Amingos FC.jpg" alt="Amingos FC" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Amingos FC</span>
           </div>
+          <span class="font-semibold text-slate-700">Match 8</span>
         </div>
 
         <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
           <div class="flex items-center gap-2">
-            <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="h-8 w-8 object-contain">
+            <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Strawhat Pirates</span>
           </div>
           <span class="text-slate-500 font-medium">vs</span>
           <div class="flex items-center gap-2">
-            <img src="Red Bulls Eleven.jpg" alt="Red Bulls Eleven" class="h-8 w-8 object-contain">
+            <img src="Red Bulls Eleven.jpg" alt="Red Bulls Eleven" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Red Bulls Eleven</span>
           </div>
+          <span class="font-semibold text-slate-700">Match 9</span>
         </div>
 
         <!-- Reverse fixtures -->
         <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
           <div class="flex items-center gap-2">
-            <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="h-8 w-8 object-contain">
+            <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Strawhat Pirates</span>
           </div>
           <span class="text-slate-500 font-medium">vs</span>
           <div class="flex items-center gap-2">
-            <img src="Amingos FC.jpg" alt="Amingos FC" class="h-8 w-8 object-contain">
+            <img src="Amingos FC.jpg" alt="Amingos FC" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Amingos FC</span>
           </div>
+          <span class="font-semibold text-slate-700">Match 10</span>
         </div>
 
         <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
           <div class="flex items-center gap-2">
-            <img src="Amingos FC.jpg" alt="Amingos FC" class="h-8 w-8 object-contain">
+            <img src="Amingos FC.jpg" alt="Amingos FC" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Amingos FC</span>
           </div>
           <span class="text-slate-500 font-medium">vs</span>
           <div class="flex items-center gap-2">
-            <img src="Red Bulls Eleven.jpg" alt="Red Bulls Eleven" class="h-8 w-8 object-contain">
+            <img src="Red Bulls Eleven.jpg" alt="Red Bulls Eleven" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Red Bulls Eleven</span>
           </div>
+          <span class="font-semibold text-slate-700">Match 11</span>
         </div>
 
         <div class="flex justify-between items-center bg-slate-50 p-3 rounded-lg shadow-sm">
           <div class="flex items-center gap-2">
-            <img src="Red Bulls Eleven.jpg" alt="Red Bulls Eleven" class="h-8 w-8 object-contain">
+            <img src="Red Bulls Eleven.jpg" alt="Red Bulls Eleven" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Red Bulls Eleven</span>
           </div>
           <span class="text-slate-500 font-medium">vs</span>
           <div class="flex items-center gap-2">
-            <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="h-8 w-8 object-contain">
+            <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="h-8 w-8 object-contain" />
             <span class="font-semibold">Strawhat Pirates</span>
           </div>
+          <span class="font-semibold text-slate-700">Match 12</span>
         </div>
       </div>
     </div>
@@ -178,13 +214,20 @@
     <div>
       <h3 class="text-2xl font-semibold text-slate-800 mb-4 border-b pb-2">Knockout Stage</h3>
       <div class="space-y-4">
-        <div class="bg-slate-50 p-3 rounded-lg shadow-sm font-medium">SF1: Winner Group A 🆚 Runner-up Group B</div>
-        <div class="bg-slate-50 p-3 rounded-lg shadow-sm font-medium">SF2: Winner Group B 🆚 Runner-up Group A</div>
-        <div class="bg-slate-50 p-3 rounded-lg shadow-sm font-medium">Third Place: Loser SF1 🆚 Loser SF2</div>
-        <div class="bg-yellow-50 p-3 rounded-lg shadow font-bold text-yellow-700">🏆 Final: Winner SF1 🆚 Winner SF2</div>
+        <div class="bg-slate-50 p-3 rounded-lg shadow-sm font-medium">
+          SF1: Winner Group A 🆚 Runner-up Group B
+        </div>
+        <div class="bg-slate-50 p-3 rounded-lg shadow-sm font-medium">
+          SF2: Winner Group B 🆚 Runner-up Group A
+        </div>
+        <div class="bg-slate-50 p-3 rounded-lg shadow-sm font-medium">
+          Third Place: Loser SF1 🆚 Loser SF2
+        </div>
+        <div class="bg-yellow-50 p-3 rounded-lg shadow font-bold text-yellow-700">
+          🏆 Final: Winner SF1 🆚 Winner SF2
+        </div>
       </div>
     </div>
   </section>
 </body>
 </html>
-
